Mise a jour global

--- a/contact.html
+++ b/contact.html
@@ -167,16 +167,16 @@
             <iframe class="w-[750px] h-[707px] max-sm:w-[320px]"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12963.526154610132!2d10.311679870501042!3d35.679918761399954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fde9a8593f515d%3A0xd77850bb8dac0995!2sStit%2C%20Zone%20industrielle%2C%20Sidi%20El%20H%C3%A9ni%204025!5e0!3m2!1sen!2stn!4v1698399064952!5m2!1sen!2stn"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      </section>
     </div>
 </main>
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-white dark:bg-gray-900 max-sm:px-12">
   
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
              
-              <p class="text-white font-mono text-2xl my-6">A Propos</p>
-              <p class="w-[500px] max-sm:w-[250px] text-md font-medium text-gray-400"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, veniam aliquam tempore assumenda nemo magni officia voluptatum architecto alias ad commodi nesciunt rem, et repudiandae saepe excepturi sequi, ex sint.</p>
-              <a href="#" class="flex items-center my-6 max-sm:justify-center max-sm:flex"">
-                <img src="assets/logo.svg" class="h-28 mr-3  alt="FlowBite Logo" />
+              <p class="text-white font-mono text-2xl my-6 max-sm:text-left">A Propos</p>
+              <p class="w-[500px] max-sm:w-[250px] text-md font-medium text-gray-400 max-sm:text-left max-sm:ml-4"> La Société Tunisienne spécialisée dans la fabrication des tapis Avec une équipe hautement qualifiée, STIT vous propose un savant mélange de tradition, d’artisanat et de fabrication industrielle Tunisienne, avec un souci constant du détail et de la qualité optimale.</p>
+              <a href="index.html" class="flex items-center my-6 max-sm:justify-center max-sm:flex"">
+                <img src="assets/logo.svg" class="h-28 mr-3 alt="Stit Logo" />
             </a>
           </div>
           
