--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
     <div class="hidden duration-700 ease-in-out" data-carousel-item>
       <img src="assets/tapis-1.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center" alt="...">
       <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-        <p class="font-montserrat-700 lg:text-[64px] text-center" >Transformez Votre Espace avec Nos Tapis Élégants</p>
+        <p class="font-montserrat-700 lg:text-[64px] max-sm:text-[20px] text-center" >Transformez Votre Espace avec Nos Tapis Élégants</p>
       </div>
     </div>
       <!-- Item 3 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
         <img src="assets/tapis2.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center" alt="...">
-        <div class="absolute top-2/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-          <p class="font-montserrat-700 lg:text-[64px] text-bottom mt-20 text-center">Découvrez le Confort Sous Vos Pieds</p>
+        <div class="absolute top-1/2  left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
+          <p class="font-montserrat-700 lg:text-[64px] lg:mt-12 max-sm:text-[28px] text-center">Découvrez le Confort Sous Vos Pieds</p>
         </div>
       </div>
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
@@ -140,14 +140,11 @@
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
         <img src="assets/tapis4.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-bottom" alt="...">
         <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-          <p class="font-montserrat-700 lg:text-[64px] text-gray-900 text-center max-sm:mt-24">Tapis Qui Racontent Votre Histoire</p>
+          <p class="font-montserrat-700 lg:text-[72px] text-gray-900 max-sm:text-[18px] text-center max-sm:mt-24">Le Confort et l'Élégance à Portée de Main</p>
         </div>
       </div>
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
         <img src="assets/tapis5.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-bottom" alt="...">
-        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-          <p class="font-montserrat-700 lg:text-[74px] text-center">Le Confort et l'Élégance à Portée de Main</p>
-        </div>
       </div>
   </div>
   <!-- Slider indicators -->
@@ -365,16 +362,16 @@
 
 <!-- Footer -->
 
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-white dark:bg-gray-900 max-sm:px-12">
   
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0">
            
-            <p class="text-white font-mono text-2xl my-6">A Propos</p>
-            <p class="w-[500px] max-sm:w-[250px] text-md font-medium text-gray-400"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, veniam aliquam tempore assumenda nemo magni officia voluptatum architecto alias ad commodi nesciunt rem, et repudiandae saepe excepturi sequi, ex sint.</p>
-            <a href="#" class="flex items-center my-6 max-sm:justify-center max-sm:flex"">
-              <img src="assets/logo.svg" class="h-28 mr-3  alt="FlowBite Logo" />
+            <p class="text-white font-mono text-2xl my-6 max-sm:text-left">A Propos</p>
+            <p class="w-[500px] max-sm:w-[250px] text-md font-medium text-gray-400 max-sm:text-left max-sm:ml-4"> La Société Tunisienne spécialisée dans la fabrication des tapis Avec une équipe hautement qualifiée, STIT vous propose un savant mélange de tradition, d’artisanat et de fabrication industrielle Tunisienne, avec un souci constant du détail et de la qualité optimale.</p>
+            <a href="index.html" class="flex items-center my-6 max-sm:justify-center max-sm:flex"">
+              <img src="assets/logo.svg" class="h-28 mr-3 alt="Stit Logo" />
           </a>
         </div>
         
