--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
     </div>
     
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
+<nav class="border-gray-200 bg-gray-900">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="https://stit.com/" class="flex items-center">
       <img src="assets/logo.svg" class="h-16 mr-3"alt="Logo" />
   </a>
@@ -167,7 +167,7 @@
             <iframe class="w-[750px] h-[707px] max-sm:w-[320px]"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12963.526154610132!2d10.311679870501042!3d35.679918761399954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fde9a8593f515d%3A0xd77850bb8dac0995!2sStit%2C%20Zone%20industrielle%2C%20Sidi%20El%20H%C3%A9ni%204025!5e0!3m2!1sen!2stn!4v1698399064952!5m2!1sen!2stn"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      </section>
     </div>
 </main>
-<footer class="bg-white dark:bg-gray-900 max-sm:px-12">
+<footer class="bg-gray-900 max-sm:px-12">
   
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
