--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900 ">
+<nav class="border-gray-200 bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
   <a href="https://stit.com/" class="flex items-center">
       <img src="assets/logo.svg" class="h-16 mr-3"alt="Logo" />
@@ -362,7 +362,7 @@
 
 <!-- Footer -->
 
-<footer class="bg-white dark:bg-gray-900 max-sm:px-12">
+<footer class="bg-gray-900 max-sm:px-12">
   
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
