--- a/valeurs.html
+++ b/valeurs.html
@@ -149,7 +149,7 @@
 
 </main>
     
-<footer class="bg-white dark:bg-gray-900 max-sm:px-12">
+<footer class="bg-gray-900 max-sm:px-12">
   
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
