--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <h5 class="mb-2 text-2xl font-normal tracking-tight text-gray-900 dark:text-gray-900 text-center">Des Projets sur Mesure</h5>
       </a>
       <p class="mb-3 font-mono text-gray-900 dark:text-gray-900 text-center">Concevoir et fabriquer à nos chers clients des Tapis, selon leurs désirs, des plus petits aux grands détails pour assurer une satisfaction complète.</p>
-      <a href="#" class="flex justify-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-100 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+      <a href="#" class="flex justify-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         Savoir plus
       </a>
     </div>
@@ -313,46 +313,46 @@
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8">
   <div class="grid gap-4">
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/111.jpg" alt="">
+          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/111.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/2.jpg" alt="">
+          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/2.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/3.jpg" alt="">
-      </div>
-  </div>
-  <div class="grid gap-4">
-      <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/4.jpg" alt="">
-      </div>
-      <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/5.jpg" alt="">
-      </div>
-      <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/6.jpg" alt="">
+          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/3.jpg" alt="">
       </div>
   </div>
   <div class="grid gap-4">
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/77.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/4.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/8.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/5.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/9.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/6.jpg" alt="">
       </div>
   </div>
   <div class="grid gap-4">
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/10.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/77.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/11.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/8.jpg" alt="">
       </div>
       <div>
-          <img class="h-auto max-w-full rounded-lg object-cover h-full" src="assets/12.jpg" alt="">
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/9.jpg" alt="">
+      </div>
+  </div>
+  <div class="grid gap-4">
+      <div>
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/10.jpg" alt="">
+      </div>
+      <div>
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/11.jpg" alt="">
+      </div>
+      <div>
+          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/12.jpg" alt="">
       </div>
   </div>
 </div>
