--- a/valeurs.html
+++ b/valeurs.html
@@ -46,8 +46,8 @@
     </div>
     
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900 ">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
+    <nav class="border-gray-200 bg-gray-900">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
   <a href="index.html" class="flex items-center">
       <img src="assets/logo.svg" class="h-16 mr-3"alt="Logo" />
   </a>
