--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
 
 <nav class="border-gray-200 bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4  ">
   <a href="index.html" class="flex items-center">
       <img src="assets/logo.svg" class="h-16 mr-3"alt="Logo" />
   </a>
@@ -65,7 +65,7 @@
       </svg>
       <span class="sr-only">Search</span>
     </button>
-    <div class="relative hidden md:block">
+    <div class="relative hidden md:block ">
       <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
         <svg class="w-4 h-4 text-gray-500 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
@@ -81,16 +81,16 @@
         </svg>
     </button>
   </div>
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-search">
-      <div class="relative mt-3 md:hidden">
-        <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-          <svg class="w-4 h-4 text-gray-500 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 " id="navbar-search">
+      <div class="relative mt-3 md:hidden ">
+        <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none bg-gray-900">
+          <svg class="w-4 h-4 text-gray-500 text-gray-400 bg-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
           </svg>
         </div>
         <input type="text" id="search-navbar" class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500" placeholder="Search...">
       </div>
-      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white bg-gray-800 md:bg-gray-900 border-gray-700">
+      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-gray-900 bg-gray-800 md:bg-gray-900 border-gray-700">
         <li>
           <a href="index.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:text-blue-500" aria-current="page">Acceuil</a>
         </li>
@@ -224,7 +224,7 @@
     </div>
     <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow  border-gray-700 max-sm:mb-4">
       <a href="#" class="flex justify-center">
-          <img class="rounded-t-lg mt-8 py-12" src="assets/surmesure.png" alt="" />
+          <img class="rounded-t-lg lg:w-52 max-sm:w-44" src="assets/surmesure.png" alt="" />
       </a>
       <div class="p-5">
           <a href="#">
