--- a/index.html
+++ b/index.html
@@ -313,46 +313,46 @@
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8">
   <div class="grid gap-4">
       <div>
-          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/111.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/111.jpg" alt="">
       </div>
       <div>
-          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/2.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/2.jpg" alt="">
       </div>
       <div>
-          <img class="h-16 max-w-full rounded-lg object-cover h-full" src="assets/3.jpg" alt="">
-      </div>
-  </div>
-  <div class="grid gap-4">
-      <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/4.jpg" alt="">
-      </div>
-      <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/5.jpg" alt="">
-      </div>
-      <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/6.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/3.jpg" alt="">
       </div>
   </div>
   <div class="grid gap-4">
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/77.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/4.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/8.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/5.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/9.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/6.jpg" alt="">
       </div>
   </div>
   <div class="grid gap-4">
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/10.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/77.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/11.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/8.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h-auto max-w-full rounded-lg object-cover h-full" src="assets/12.jpg" alt="">
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/9.jpg" alt="">
+      </div>
+  </div>
+  <div class="grid gap-4">
+      <div>
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/10.jpg" alt="">
+      </div>
+      <div>
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/11.jpg" alt="">
+      </div>
+      <div>
+          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/12.jpg" alt="">
       </div>
   </div>
 </div>
