--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.cdnfonts.com/css/golden-beach-personal-use" rel="stylesheet">
+    <!-- <link href="https://fonts.cdnfonts.com/css/golden-beach-personal-use" rel="stylesheet"> -->
   </head>
-<style>
+<!-- <style>
   .font-montserrat-700 {
   font-family: 'Golden Beach Personal Use', sans-serif;
   font-weight: 700;
   color: #ffffff;
 }
-</style>
+</style> -->
 <body>
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
         <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl " aria-hidden="true">
@@ -117,19 +117,19 @@
   
 <div id="default-carousel" class="relative w-full" data-carousel="slide">
   <!-- Carousel wrapper -->
-  <div class="relative  overflow-hidden rounded-lg lg:h-[500px] max-sm:h-56">
+  <div class="relative  overflow-hidden rounded-lg lg:h-[750px] max-sm:h-96">
 
     <div class="hidden duration-700 ease-in-out" data-carousel-item>
       <img src="assets/tapis-1.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center" alt="...">
       <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-        <p class="font-montserrat-700 lg:text-[64px] max-sm:text-[20px] text-center" >Transformez Votre Espace avec Nos Tapis Élégants</p>
+        <p class="font-bold text-white lg:text-[64px] max-sm:text-[20px] text-center" >Transformez Votre Espace avec Nos Tapis Élégants</p>
       </div>
     </div>
       <!-- Item 3 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
         <img src="assets/tapis2.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center" alt="...">
         <div class="absolute top-1/2  left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-          <p class="font-montserrat-700 lg:text-[64px] lg:mt-12 max-sm:text-[28px] text-center">Découvrez le Confort Sous Vos Pieds</p>
+          <p class="font-bold text-white lg:text-[64px] lg:mt-12 max-sm:text-[28px] text-center">Découvrez le Confort Sous Vos Pieds</p>
         </div>
       </div>
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
@@ -138,9 +138,9 @@
         </div>
       </div>
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="assets/tapis4.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-bottom" alt="...">
+        <img src="assets/about22.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center" alt="...">
         <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
-          <p class="font-montserrat-700 lg:text-[72px] text-gray-900 max-sm:text-[18px] text-center max-sm:mt-24">Le Confort et l'Élégance à Portée de Main</p>
+          <p class="font-bold text-white lg:text-[72px] text-gray-900 max-sm:text-[18px] text-center max-sm:mt-24">Le Confort et l'Élégance à Portée de Main</p>
         </div>
       </div>
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
@@ -202,7 +202,7 @@
         <a href="#">
           <h5 class="mb-2 text-2xl font-normal tracking-tight text-gray-900 text-center">Une Variété de Choix</h5>
         </a>
-        <p class="mb-3 font-mono text-gray-900  text-center">S.T.I.T, l’engagement, le professionnalisme, l’esprit coopératif, sont un atout majeur pour réussir notre objectif majeur : la satisfaction de nos clients.</p>
+        <p class="mb-3 font-mono text-gray-900 text-center">S.T.I.T, l’engagement, le professionnalisme, l’esprit coopératif, sont un atout majeur pour réussir notre objectif majeur : la satisfaction de nos clients.</p>
         <a href="#" class="flex justify-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 bg-blue-500 hover:bg-blue-700 focus:ring-blue-800">
           Savoir plus
           </a>
@@ -251,7 +251,7 @@
                 <dd class="text-gray-500 text-gray-900">Projet Réalisés</dd>
             </div>
             <div class="flex flex-col items-center justify-center">
-                <dt class="mb-2 text-3xl font-extrabold max-sm:mt-6 ">874+</dt>
+                <dt class="mb-2 text-3xl font-extrabold">874+</dt>
                 <dd class="text-gray-500 text-gray-900 max-sm:text-center">Clients Satistfactin</dd>
             </div>
             <div class="flex flex-col items-center justify-center">
@@ -310,49 +310,49 @@
   <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Galerie</h1>
 </div>
 
-<div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8">
-  <div class="grid gap-4">
+<div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8 max-sm:block max-sm:gap-8">
+  <div class="grid gap-4 max-sm:gap-8">
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/111.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/111.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/2.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/2.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/3.jpg" alt="">
-      </div>
-  </div>
-  <div class="grid gap-4">
-      <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/4.jpg" alt="">
-      </div>
-      <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/5.jpg" alt="">
-      </div>
-      <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/6.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full max-sm:mb-8" src="assets/3.jpg" alt="">
       </div>
   </div>
-  <div class="grid gap-4">
+  <div class="grid gap-4 max-sm:gap-8">
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/77.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/4.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/8.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/5.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/9.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full max-sm:mb-8" src="assets/6.jpg" alt="">
       </div>
   </div>
-  <div class="grid gap-4">
+  <div class="grid gap-4 max-sm:gap-8">
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/10.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/77.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/11.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/8.jpg" alt="">
       </div>
       <div>
-          <img class="max-sm:h[50px] max-sm:w-[160px] lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/12.jpg" alt="">
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full  max-sm:mb-8" src="assets/9.jpg" alt="">
+      </div>
+  </div>
+  <div class="grid gap-4 max-sm:gap-8">
+      <div>
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/10.jpg" alt="">
+      </div>
+      <div>
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/11.jpg" alt="">
+      </div>
+      <div>
+          <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/12.jpg" alt="">
       </div>
   </div>
 </div>
