--- a/produit.html
+++ b/produit.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produit</title>
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
@@ -339,7 +338,7 @@
 
     <div class="grid grid-cols-3 lg:px-36 lg:py-12 max-sm:block gap-4">
       <div>
-        <swiper-container class="mySwiper" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
+        <swiper-container class="mySwiper max-sm:py-4" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
         cube-effect-slide-shadows="true" cube-effect-shadow-offset="20" cube-effect-shadow-scale="0.94">
         <swiper-slide class="">
           <img src="assets/dd.jpg" class="max-sm:h-[380px] lg:h-[525px]" />
@@ -357,7 +356,7 @@
       </div>
       <!--  -->
       <div>
-        <swiper-container class="mySwiper" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
+        <swiper-container class="mySwiper max-sm:py-4" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
         cube-effect-slide-shadows="true" cube-effect-shadow-offset="20" cube-effect-shadow-scale="0.94">
         <swiper-slide class="">
           <img src="assets/n1.jpg" class="max-sm:h-[380px] lg:h-[525px]" />
@@ -375,7 +374,7 @@
       </div>
       <!--  -->
       <div>
-        <swiper-container class="mySwiper" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
+        <swiper-container class="mySwiper max-sm:py-4" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
         cube-effect-slide-shadows="true" cube-effect-shadow-offset="20" cube-effect-shadow-scale="0.94">
         <swiper-slide class="">
           <img src="assets/a1.jpg" class="max-sm:h-[380px] lg:h-[525px]" />
