--- a/produit.html
+++ b/produit.html
@@ -336,9 +336,9 @@
       <h1 class="font-bold text-[44px] max-sm:text-xl font-mono">Galerie</h1>
     </div>
 
-    <div class="grid grid-cols-3 lg:px-36 lg:py-12 max-sm:block gap-4">
+    <div class="grid grid-cols-3 lg:px-36 lg:py-12 max-sm:block gap-4 max-sm:px-12">
       <div>
-        <swiper-container class="mySwiper max-sm:py-4" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
+        <swiper-container class="mySwiper max-sm:py-4 max-sm:px-12" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
         cube-effect-slide-shadows="true" cube-effect-shadow-offset="20" cube-effect-shadow-scale="0.94">
         <swiper-slide class="">
           <img src="assets/dd.jpg" class="max-sm:h-[380px] lg:h-[525px]" />
