--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,16 @@
     <link href="https://fonts.cdnfonts.com/css/golden-beach-personal-use" rel="stylesheet">
 </head>
 <style>
+
     .font-montserrat-700 {
     font-family: 'Golden Beach Personal Use', sans-serif;
     font-weight: 700;
     color: #ffffff;
   }
+
   </style>
 <body>
+
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
         <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl " aria-hidden="true">
           <div class="aspect-[577/310] w-[36.0625rem] bg-gradient-to-r from-[#ff80b5] to-[#9089fc] opacity-30" style="clip-path: polygon(74.8% 41.9%, 97.2% 73.2%, 100% 34.9%, 92.5% 0.4%, 87.5% 0%, 75% 28.6%, 58.5% 54.6%, 50.1% 56.8%, 46.9% 44%, 48.3% 17.4%, 24.7% 53.9%, 0% 27.9%, 11.9% 74.2%, 24.9% 54.1%, 68.6% 100%, 74.8% 41.9%)"></div>
@@ -39,13 +42,13 @@
           </div>
       </div>
 
-    <div class="info p-1 bg-gray-900 flex justify-between  border border-bottom border-gray-500  ">
+    <div class="info p-1 bg-gray-900 flex justify-between border border-bottom border-gray-500">
         <div class="icon flex gap-4 p-2">
             <i class="fa-brands fa-facebook text-white"></i>
             <i class="fa-brands fa-instagram text-white"></i>
             <i class="fa-brands fa-linkedin text-white"></i>
         </div>
-        <div class="email flex">
+        <div class="flex">
             <i class="fa-solid fa-location-dot text-white p-2 max-sm:hidden"></i>
             <p class="text-center text-white p-1 max-sm:hidden">Zone industrielle,Sidi el Heni, 4025 Sousse - Tunisie <i class="fa-solid fa-envelope text-white ml-2"></i> <a href="">contact@stit.com.tn</a></p>
             <i class="fa-solid fa-phone-volume text-white p-2 ml-2"></i><p class="text-white text-center p-1 mr-2">73 280 083</p>
@@ -54,7 +57,7 @@
     
 
     <nav class="border-gray-200 bg-gray-900">
-        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4  ">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="index.html" class="flex items-center">
             <img src="assets/logo.svg" class="h-16 mr-3"alt="Logo" />
         </a>
@@ -101,7 +104,7 @@
                 <a href="produit.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Produit</a>
               </li>
               <li>
-                <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Categories</a>
+                <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
               </li>
               <li>
                 <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
