--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link href="https://fonts.cdnfonts.com/css/golden-beach-personal-use" rel="stylesheet"> -->
   </head>
-<!-- <style>
-  .font-montserrat-700 {
-  font-family: 'Golden Beach Personal Use', sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-</style> -->
+  <style>
+    .product_images{
+      height: 350px;
+      width: 100%;
+    }
+  </style>
 <body>
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
         <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl " aria-hidden="true">
@@ -101,7 +99,7 @@
           <a href="produit.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Produit</a>
         </li>
         <li>
-          <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Categories</a>
+          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
         </li>
         <li>
           <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
@@ -305,12 +303,328 @@
   </div>
 </div>
 
-<!-- Gallery -->
-<div class="justify-center flex text-center pt-10">
-  <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Galerie</h1>
+<div class="grid lg:grid-cols-2 2xl:grid-cols-5 lg:py-12 lg:px-36">
+  <div class="hidden relative lg:block 2xl:col-span-3">
+    <img
+      class="absolute inset-0 w-full h-full object-cover object-center"
+      src="assets/frange.jpg"
+      alt="frange"
+    />
+  </div>
+  <div class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:px-12 lg:py-24 lg:max-w-full xl:mr-0 2xl:col-span-2">
+  <div class="xl:max-w-xl">
+    <img class="h-24 max-sm:hidden" src="assets/logo2.png" alt="Workcation" />
+    <img
+      class="mt-6 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover object-center lg:hidden"
+      src="assets/frange.jpg"
+      alt="frange"
+    />
+    <h1
+      class="mt-6 text-2xl font-mono text-gray-900 sm:mt-8 sm:text-4xl lg:text-3xl xl:text-4xl"
+    >
+    Découvrez nos  
+      <br class="hidden lg:inline" />
+      <span class="text-yellow-500 font-mono">Large choix de Franges.</span>
+    </h1>
+    <div class="grid grid-cols-4 flex justify-center gap-3 p-8" >
+      <div>
+        <div class="row border border-gray-900 rounded ">
+          <img src="assets/f7.jpg" class="product_images" loading="lazy">
+        </div>
+        <div class="row border border-gray-900 mt-1 p-1 bg-gray-100 rounded">
+          <h1 class="font-mono font-bold text-center">Ref: NCI-3</h1>
+        </div>
+      </div>
+
+      <div>
+        <div class="row border border-gray-900 rounded ">
+          <img src="assets/f8.jpg" class="product_images" loading="lazy">
+        </div>
+        <div class="row border border-gray-900 mt-1 p-1 bg-gray-100 rounded">
+          <h1 class="font-mono font-bold text-center">Frange</h1>
+        </div>
+      </div>
+
+      <div>
+        <div class="row border border-gray-900 rounded ">
+          <img src="assets/f9.jpg" class="product_images" loading="lazy">
+        </div>
+        <div class="row border border-gray-900 mt-1 p-1 bg-gray-100 rounded">
+          <h1 class="font-mono font-bold text-center">Frange</h1>
+        </div>
+      </div>
+      <div>
+        <div class="row border border-gray-900 rounded ">
+          <img src="assets/f10.jpg" class="product_images" loading="lazy">
+        </div>
+        <div class="row border border-gray-900 mt-1 p-1 bg-gray-100 rounded">
+          <h1 class="font-mono font-bold text-center">Frange</h1>
+        </div>
+      </div>
+    
+    <div class="mt-4 sm:mt-6">
+      <a
+        class="inline-block px-5 py-3 w-32 rounded-lg uppercase tracking-wider font-semibold text-sm text-white shadow-lg sm:text-base hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 bg-blue-500 hover:bg-blue-700 focus:ring-blue-800"
+        href="Frange.html"
+      >
+        Voir Plus
+      </a>
+    </div>
+  </div>
+</div>
 </div>
 
-<div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8 max-sm:block max-sm:gap-8">
+</div>
+
+<!-- Gallery -->
+<div class="justify-center flex text-center pt-10">
+  <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Franges</h1>
+</div>
+
+<div class="grid max-sm:grid-cols-2 lg:grid-cols-5 px-4 gap-2 pb-12 lg:px-80">
+  <div class="border border-gray-900">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f1.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f2.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f3.jpg" class="product_images" loading="lazy" >
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f4.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f5.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f6.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f7.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f8.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f9.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f10.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f11.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f12.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f13.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f14.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+  <div class="border border-gray-900 ">
+    <div class="row border border-gray-900 ">
+      <img src="assets/f15.jpg" class="product_images" loading="lazy">
+    </div>
+    <div class="row border border-gray-900 p-1 bg-gray-100">
+      <h1 class="font-mono font-bold text-center">Frange</h1>
+    </div>
+    <div class="grid grid-cols-2" >
+      <div class="border border-r border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold">Ref:AC526</p>
+      </div>
+      <div class="border border-l border-gray-900 p-1">
+        <p class="font-mono text-xs text-center font-bold"> Beige</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Products -->
+<!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:px-36 lg:py-24 max-sm:px-8 max-sm:py-8 max-sm:block max-sm:gap-8">
   <div class="grid gap-4 max-sm:gap-8">
       <div>
           <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/111.jpg" alt="">
@@ -355,7 +669,7 @@
           <img class="lg:max-w-full rounded-lg object-cover lg:h-full" src="assets/12.jpg" alt="">
       </div>
   </div>
-</div>
+</div> -->
 
 
 </main>
