--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
         </div></div>
       </div>
 
-      <div class="justify-center flex text-center pb-10 mt-24">
-        <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Bobines</h1>
+      <div class="justify-center flex text-center pb-10 lg:mt-24 max-sm:mt-12">
+        <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Bobines</h1>
       </div>
-      <swiper-container class="mySwiper3 px-36" pagination="true" pagination-clickable="true" space-between="20"
+      <swiper-container class="mySwiper3 lg:px-36 max-sm:pb-10" pagination="true" pagination-clickable="true" space-between="20"
       slides-per-view="3">
       <swiper-slide class="mySwiper31"><img src="assets/b1.jpg" alt=""></swiper-slide>
       <swiper-slide class="mySwiper31"><img src="assets/b2.jpg" alt=""></swiper-slide>
